--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm run build --if-present
+      - run: npm test
 
   publish-npm:
     needs: build
