--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,6 +3,9 @@ name: Node.js Package
 on:
   pull_request:
     branches:
+    - develop 
+  push:
+    branches:
     - develop
 
 jobs:
@@ -29,4 +32,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{github.token}}
