--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,6 +28,7 @@ jobs:
           scope: '@contco'
       - run: npm ci
       - run: |
+            git switch -c develop
             git config user.email ""
             git config user.name "Publish Action"
       - run: |
