--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,6 +1,9 @@
 name: Node.js Package
 
 on:
+  pull_request:
+    branches:
+    - develop 
   push:
     branches:
     - develop
@@ -32,6 +35,7 @@ jobs:
             git config user.email ""
             git config user.name "Publish Action"
       - run: |
+            git pull
             npm version patch
             git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY"
       - run: npm publish
