--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -35,7 +35,7 @@ jobs:
             git config user.email ""
             git config user.name "Publish Action"
       - run: |
-            git pull "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY"
+            git pull --ff-only
             npm version patch
             git push "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY"
       - run: npm publish
